# atomworks-caliby

./: .env  .env.sample  .gitignore  .releaserc.js  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  README.md  pyproject.toml
.ipd/: .env
cifutils/: .env.sample  .gitignore  .gitlab-ci.yml  .releaserc  .releaserc.js  Makefile  README.md  apptainer.spec  cifutils_biotite.py  common.py  dev-requirements.txt  enums.py  environment.yaml  explore_biotite.ipynb  pyproject.toml  requirements-dev.txt  setup.py
cifutils/.ci/: run_lint.sh  run_tests.sh
cifutils/.github/ci/: build_apptainer.sh  run_tests.sh
cifutils/.github/workflows/: build_apptainer.yaml  docs_deploy.yaml  lint_and_test.yaml  release.yaml
cifutils/.ipd/: README.md  ccd  cifutils.sif  pdb  setup.sh
cifutils/ccd/: download_ccd_ligands.sh  make_residue_library_from_ccd.py
cifutils/cifutils/: Atom.py  Bond.py  Chain.py  Model.py  MultiChildComponent.py  Residue.py  Structure.py  __init__.py  casf2016.csv  cifutils.py  cifutils_biotite.py  cifutils_extended.py  cifutils_legacy.py  cifutils_noquasi.py  common.py  constants.py  data_structures.py  enums.py  make_library.ipynb  make_residue_library_from_ccd.py  nonstandard residues.ipynb  obutils.py  parser.py  parser_utils.py  pdb_parser.ipynb  template.py  test.csv  wip.py
cifutils/cifutils/cifutils_biotite/: cifutils_biotite.py  cifutils_biotite_utils.py  common.py  constants.py  enums.py  make_residue_library_from_ccd.py  split_residue_df_into_individual_files.py  test.ipynb  transforms.py
cifutils/cifutils/cifutils_biotite/transforms/: atom_array.py  categories.py
cifutils/cifutils/cifutils_biotite/utils/: assembly_utils.py  atom_matching_utils.py  bond_utils.py  cifutils_biotite_utils.py  io_utils.py  non_rcsb_utils.py  residue_utils.py  selection_utils.py  sequence_utils.py
cifutils/cifutils/cifutils_legacy/: astex_diverse.csv  astex_non_native.csv  cifutils_legacy.py  cifutils_noquasi.py  download.sh  geometry.py  obutils.py
cifutils/cifutils/cifutils_legacy/data/: quasisym.csv
cifutils/cifutils/data/: elements.txt
cifutils/cifutils/pdbx/reader/: PdbxReader.py
cifutils/cifutils/tools/: fasta.py  inference.py  rdkit.py
cifutils/cifutils/transforms/: atom_array.py  categories.py
cifutils/cifutils/utils/: __init__.py  assembly_utils.py  atom_matching_utils.py  bond_utils.py  ccd.py  chain_utils.py  io_utils.py  non_rcsb_utils.py  residue_utils.py  selection_utils.py  sequence_utils.py  visualize.py
cifutils/data/: 1cbn.bcif  1en2.bcif  1ivo.bcif  1lys.bcif  1out.bcif  1zy8.bcif  4js1.bcif  5xnl.bcif  6dmh.bcif  6wjc.bcif
cifutils/docs/: api_reference.rst  common.rst  conf.py  constants.rst  contributor_guide.rst  docs_requirements.txt  enums.rst  extensions.rst  glossary.rst  index.rst  installation.rst  modules.rst  parser.rst  sg_execution_times.rst  template.rst
cifutils/docs/examples/: GALLERY_HEADER.rst  plot_basics.py  plot_monomer.py
cifutils/docs/tools/: fasta.rst  inference.rst  rdkit.rst
cifutils/docs/transforms/: atom_array.rst  categories.rst
cifutils/docs/tutorial/: index.rst  parser.rst  tools.rst  transforms.rst  utils.rst  visualisation.ipynb
cifutils/docs/utils/: assembly.rst  bonds.rst  ccd.rst  chain.rst  io_utils.rst  non_rcsb.rst  selection.rst  sequence.rst  testing.rst  visualize.rst
cifutils/examples/: explore_biotite.ipynb
cifutils/scripts/: build_apptainer.sh  contribute.sh  setup_ccd_mirror.sh  test_apptainer.sh
cifutils/src/cifutils/: __init__.py  common.py  constants.py  enums.py  parser.py  template.py
cifutils/src/cifutils/tools/: fasta.py  inference.py  obabel.py  rdkit.py
cifutils/src/cifutils/transforms/: atom_array.py  categories.py
cifutils/tests/: 041_H_6qy8_D_addCH3_0.cif  conftest.py  explore_biotite.ipynb  profile_cif_utils_extended.py  test_biotite.py  test_cifutils_biopython_biotite.py  test_cifutils_legacy.py  test_cifutils_legacy_extend_biopython.py  test_cifutils_legacy_vs_biotite.py  test_cifutils_vs_biopython.py  time_loading.py
cifutils/tests/benchmarking/: profile_cifutils_biotite.py  time_loading.py
cifutils/tests/component/: test_against_legacy_parser.py  test_arginine_renaming.py  test_atom_order.py  test_bioassemblies.py  test_caching.py  test_chain_types.py  test_deposition_and_release_dates.py  test_deserialize_assembly.py  test_ec_numbers.py  test_entity_annotations.py  test_identifiers.py  test_ignore_residues.py  test_load_with_all_resolved.py  test_mse_to_met.py  test_multiple_models.py  test_one_letter_sequences.py  test_parser.py  test_patch_symmetry_centers.py  test_prior_bugs.py  test_regression.py  test_remove_crystallization_aids.py  test_remove_hydrogens.py  test_sequence_maps.py  test_unmatched_atom_types.py
cifutils/tests/components/: test_arginine_renaming.py  test_atom_order.py  test_bioassemblies.py  test_bond_utils.py  test_caching.py  test_chain_types.py  test_chain_utils.py  test_charges.py  test_computationally_predicted.py  test_deposition_and_release_dates.py  test_deserialize_assembly.py  test_ec_numbers.py  test_entity_annotations.py  test_fix_ligands_at_symmetry_centers.py  test_get_ph.py  test_hydrogen_policy.py  test_identifiers.py  test_ignore_residues.py  test_io.py  test_logging.py  test_mse_to_met.py  test_multiple_models.py  test_nan.py  test_non_covalent_bond_parsing.py  test_non_rcsb_functionality.py  test_patch_symmetry_centers.py  test_prior_bugs.py  test_regression.py  test_remove_hydrogens.py  test_selection_utils.py  test_sequence_maps.py  test_sequence_utils.py  test_structure_with_non_ccd_ligand.py  test_testing_tools.py  test_unmatched_atom_types.py  test_visualize.py
cifutils/tests/data/: 1a1e_cif_data_dict.pkl  example_ncaa.cif
cifutils/tests/speed/: test_parse_speed.py
cifutils/tests/tools/: test_inference_processing.py  test_rdkit.py
cifutils/tests/utils/: test_io.py  test_scatter.py  test_selection_utils.py  test_sequence_utils.py  test_testing_tools.py  test_visualize.py
cifutils/utils/: assembly_utils.py  atom_matching_utils.py  bond_utils.py  non_rcsb_utils.py  residue_utils.py  sequence_utils.py
(+752 files in other folders)
