[project]
name = "cifutils"
version = "1.0.0"
description = "Convert arbitrary biological inputs into an AtomArray, modify them, and then perform downstream actions like training machine learning models."
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    { name = "Nate Corley", email = "ncorley@uw.edu" },
    { name = "Simon Mathis", email = "smathis@uw.edu" },
    { name = "Pascal Strumfels"},
    { name = "Rohith Krishna"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cifutils"]

[tool.hatch.build.targets.wheel.force-include]
# to include data files in the wheel when `pip install`-ing (if we want to give some test cases)

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "env",
    ".venv",
    "venv",
    "data"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Avoid linting notebooks
select = [
    "I", # ... sort imports
    "F",  # ... remove unused imports
    "W",  # ... fix warnings
]

[tool.pytest]
testpaths = "tests"  # Only run tests in the tests directory (speeds up collection)
norecursedirs = "docs *.egg-info .git .tox htmlcov"
conftest = "tests/conftest.py"
addopts = "--testmon-forceselect"