[project]
name = "cifutils"
dynamic = ["version"]
description = "Convert arbitrary biological inputs into an AtomArray, modify them, and then perform downstream actions like training machine learning models."
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    { name = "Nate Corley", email = "ncorley@uw.edu" },
    { name = "Simon Mathis", email = "smathis@uw.edu" },
    { name = "Pascal Strumfels"},
    { name = "Rohith Krishna"},
]

# Build settings ----------------------------------------------------------------------
[build-system]
requires = [
    "hatchling",
    "hatch-vcs == 0.4",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cifutils/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cifutils"]
package-data = {"src/cifutils" = ["tools/*.smirks"]}

[tool.hatch.build.targets.wheel.force-include]
# to include data files in the wheel when `pip install`-ing (if we want to give some test cases)
"src/cifutils/tools/chembl_transformations.smirks" = "cifutils/tools/chembl_transformations.smirks"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "env",
    ".venv",
    "venv",
    "data",
    "dev.py"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable a comprehensive set of rules for better code quality
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    #"D",   # pydocstyle
    "UP",  # pyupgrade -- use the latest supported python syntax
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "NPY", # fix deprecated numpy functions / types
    "RUF", # Ruff-specific rules
    "T10", # catch accidental debugger breakpoints in code
    "ANN"
]

# Ignore specific rules that might conflict with our style or are too strict
ignore = [
    "B006",  # do not use mutable data structures for argument defaults
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D100",  # Missing docstring in public module
    "NPY002",  # replacing legacy np.random.rand wih np.random.Generator
    "E501",  # line too long
    "SIM108",  # Replace if-else blocks
    "ANN101",  # missing annotation for `self`
    "ANN102",  # missing annotation for `cls`
    "ANN002",  # missing annotation for `*args`
    "ANN003",  # missing annotation for `**kwargs`
    "ANN204",  # missing return type annotation for special method `__init__`
    "ANN401",  # disallow `Any` type
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Add per-file-ignores for specific cases
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/*" = ["D", "E", "RUF", "ANN"]         # Ignore docstring rules in tests

[tool.pytest]
testpaths = "tests"  # Only run tests in the tests directory (speeds up collection)
norecursedirs = "docs *.egg-info .git .tox htmlcov"
conftest = "tests/conftest.py"
addopts = "--import-mode=importlib"